--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "lint": "eslint --ext .ts,tsx --max-warnings 0 ./src",
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --collectCoverage",
+    "pre-push": "yarn lint && yarn typecheck && yarn test",
+    "prepare": "husky install",
+    "expo-doctor": "node scripts/doctor.js",
+    "g": "hygen generator"
   },
   "jest": {
     "preset": "jest-expo"
@@ -38,6 +46,13 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-native": "^4.0.0",
+    "husky": "^8.0.1",
+    "hygen": "^6.2.8",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
     "react-test-renderer": "17.0.2",
