--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "g": "hygen generator"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "globalSetup": "<rootDir>/src/tests/global-setup.js",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/tests/setup.ts"
+    ],
+    "collectCoverageFrom": [
+      "./src/**",
+      "!./src/assets/**",
+      "!./src/navigation/**"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -44,10 +53,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-native": "^11.0.0",
+    "@types/jest": "^28.1.6",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-native": "^4.0.0",
