feat: added yup and formik feat: added useForm hook feat: added useLoginForm hook feat: added eslitignore file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "strict": true,
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "types/*": ["../types/*"]
+    }
   }
 }
