--- a/package.json
+++ b/package.json
@@ -67,8 +67,10 @@
     "@typescript-eslint/parser": "^5.32.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.21.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-native": "^4.0.0",
+    "eslint-plugin-testing-library": "^5.6.0",
     "husky": "^8.0.1",
     "hygen": "^6.2.8",
     "jest": "^26.6.3",
