--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
     "expo-linking": "~3.1.0",
-    "expo-secure-store": "^11.3.0",
+    "expo-secure-store": "11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
@@ -78,6 +78,7 @@
     "hygen": "^6.2.8",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
