--- a/package.json
+++ b/package.json
@@ -42,16 +42,19 @@
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
     "expo-linking": "~3.1.0",
+    "expo-localization": "^13.1.0",
     "expo-secure-store": "11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
     "expo-web-browser": "~10.2.0",
     "formik": "^2.2.9",
+    "i18next": "^21.9.1",
     "lodash": "^4.17.21",
     "native-base": "^3.4.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.18.4",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
