--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     ],
     "collectCoverageFrom": [
       "./src/**",
+      "!./src/api/**",
       "!./src/assets/**",
+      "!./src/config/**",
+      "!./src/constants/**",
       "!./src/navigation/**"
     ]
   },
