--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
+    "expo-clipboard": "^3.1.0",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
     "expo-linking": "~3.1.0",
