--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "17.0.2",
     "react-i18next": "^11.18.4",
     "react-native": "0.68.2",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
@@ -88,6 +89,9 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.21"
   },
   "private": true
 }
