--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
+    "expo-updates": "~0.13.4",
     "expo-web-browser": "~10.2.0",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
