--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
+    "expo-camera": "~12.2.0",
     "expo-clipboard": "^3.1.0",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
