--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-camera": "~12.2.0",
-    "expo-clipboard": "^3.1.0",
+    "expo-clipboard": "~3.0.1",
     "expo-constants": "~13.1.1",
     "expo-document-picker": "~10.2.1",
     "expo-font": "~10.1.0",
