--- a/eas.json
+++ b/eas.json
@@ -4,13 +4,8 @@
   },
   "build": {
     "development": {
-      "developmentClient": true,
       "distribution": "internal",
-      "channel": "development"
-    },
-    "preview": {
-      "distribution": "internal",
-      "channel": "development"
+      "channel": "staging"
     },
     "testflight": {
       "distribution": "store",
