--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@tanstack/react-query": "^4.0.10",
+    "@types/react-dom": "^18.0.10",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
