--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "hygen": "^6.2.8",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
+    "prettier": "2.3.2",
+    "eslint-config-prettier": "8.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
