--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-camera": "~12.2.0",
     "expo-clipboard": "~3.0.1",
     "expo-constants": "~13.1.1",
@@ -71,6 +72,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
+    "react-qr-code": "^2.0.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -84,6 +86,7 @@
     "@typescript-eslint/parser": "^5.32.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.21.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-native": "^4.0.0",
@@ -93,7 +96,6 @@
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
     "prettier": "2.3.2",
-    "eslint-config-prettier": "8.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
