--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
   },
   "dependencies": {
     "@codler/react-native-keyboard-aware-scroll-view": "^2.0.1",
+    "@expo/eas-build-job": "^0.2.106",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.1.0",
     "@tanstack/react-query": "^4.0.10",
     "@types/react-dom": "^18.0.10",
