--- a/package.json
+++ b/package.json
@@ -35,44 +35,43 @@
   },
   "dependencies": {
     "@codler/react-native-keyboard-aware-scroll-view": "^2.0.1",
-    "@expo/eas-build-job": "^0.2.106",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@tanstack/react-query": "^4.0.10",
-    "@types/react-dom": "^18.0.10",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
-    "expo-asset": "~8.5.0",
-    "expo-barcode-scanner": "~11.3.0",
-    "expo-camera": "~12.2.0",
-    "expo-clipboard": "~3.0.1",
-    "expo-constants": "~13.1.1",
-    "expo-document-picker": "~10.2.1",
-    "expo-font": "~10.1.0",
-    "expo-linking": "~3.1.0",
-    "expo-localization": "13.0.0",
-    "expo-secure-store": "11.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-system-ui": "~1.2.0",
-    "expo-updates": "~0.13.4",
-    "expo-web-browser": "~10.2.0",
+    "expo": "^48.0.15",
+    "expo-asset": "~8.9.1",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-camera": "~13.2.1",
+    "expo-cli": "6.3.7",
+    "expo-clipboard": "~4.1.2",
+    "expo-constants": "~14.2.1",
+    "expo-document-picker": "~11.2.2",
+    "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-localization": "14.1.1",
+    "expo-secure-store": "12.1.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
     "lodash": "^4.17.21",
     "native-base": "^3.4.11",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^11.18.4",
-    "react-native": "0.68.2",
+    "react-native": "0.71.7",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "0.18.10",
     "react-qr-code": "^2.0.8",
     "yup": "^0.32.11"
   },
@@ -81,7 +80,7 @@
     "@testing-library/jest-native": "^4.0.5",
     "@testing-library/react-native": "^11.0.0",
     "@types/jest": "^28.1.6",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.66.13",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -94,15 +93,15 @@
     "eslint-plugin-testing-library": "^5.6.0",
     "husky": "^8.0.1",
     "hygen": "^6.2.8",
-    "jest": "^26.6.3",
+    "jest": "^29.2.1",
     "jest-expo": "~45.0.0",
     "prettier": "2.3.2",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "~4.3.5"
+    "typescript": "~4.9.4"
   },
   "resolutions": {
-    "@types/react": "17.0.21"
+    "@types/react": "18.0.27"
   },
   "private": true
 }
