--- a/eas.json
+++ b/eas.json
@@ -13,9 +13,15 @@
     },
     "production": {
       "channel": "production"
-    }
+    },
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "corporative@exchangefusioncorp.com",
+        "ascAppId": "6448569599",
+        "appleTeamId": "RP53DQA7NY"
+      }
+    }
   }
 }
