--- a/app.json
+++ b/app.json
@@ -3,10 +3,10 @@
     "name": "Fast Growing",
     "slug": "fast-growing",
     "description": "Fast Growing description",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./src/assets/images/logo-app.png",
-    "owner": "supdanil",
+    "owner": "supdakon",
     "scheme": "supdanil",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -22,8 +22,9 @@
       "**/*"
     ],
     "ios": {
-      "buildNumber": "1.0.0",
-      "bundleIdentifier": "com.fastgrowing.app",
+//      "jsEngine": "jsc",
+      "buildNumber": "1.0.9",
+      "bundleIdentifier": "com.exbit.app",
       "supportsTablet": true,
       "icon": "./src/assets/images/logo-app.png",
       "usesIcloudStorage": false,
@@ -33,7 +34,7 @@
     },
     "android": {
       "versionCode": 1,
-      "package": "com.fastgrowing.app",
+      "package": "com.exbit.app",
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/images/logo-android.png",
         "backgroundColor": "#000000"
@@ -70,7 +71,7 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "c713ac5f-16ae-476b-a674-28c18962a71f"
+        "projectId": "04d8ead6-bd67-4b7b-ad73-df6078e642ad"
       }
     },
     "runtimeVersion": {
