--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "expo": "^48.0.15",
     "expo-asset": "~8.9.1",
     "expo-barcode-scanner": "~12.3.2",
@@ -50,10 +51,12 @@
     "expo-cli": "6.3.7",
     "expo-clipboard": "~4.1.2",
     "expo-constants": "~14.2.1",
+    "expo-crypto": "~12.2.1",
     "expo-document-picker": "~11.2.2",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-localization": "14.1.1",
+    "expo-network": "~5.2.1",
     "expo-secure-store": "12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
