--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint --ext .ts,tsx --max-warnings 0 ./src",
@@ -43,14 +42,14 @@
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
-    "expo": "^48.0.15",
+    "expo": "~48.0.18",
     "expo-asset": "~8.9.1",
     "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "~13.2.1",
-    "expo-cli": "6.3.7",
     "expo-clipboard": "~4.1.2",
     "expo-constants": "~14.2.1",
     "expo-crypto": "~12.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-document-picker": "~11.2.2",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
@@ -69,7 +68,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.4",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
