--- a/app.json
+++ b/app.json
@@ -18,18 +18,14 @@
       "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/e7adacde-31b0-4964-82e8-11885fe97998"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "buildNumber": "1.0.12",
+      "buildNumber": "1.0.14",
       "bundleIdentifier": "com.bultrafinance.app",
       "supportsTablet": true,
       "icon": "./src/assets/images/logo-app.png",
       "usesIcloudStorage": false,
-      "associatedDomains": [
-        "applinks:fastgrowing.com"
-      ]
+      "associatedDomains": ["applinks:fastgrowing.com"]
     },
     "android": {
       "versionCode": 1,
@@ -55,19 +51,19 @@
               "pathPrefix": "/"
             }
           ],
-          "category": [
-            "BROWSABLE",
-            "DEFAULT"
-          ]
+          "category": ["BROWSABLE", "DEFAULT"]
         }
       ]
     },
     "web": {
-      "favicon": "./src/assets/images/favicon.png"
+      "favicon": "./src/assets/images/favicon.png",
+      "build": {
+        "babel": {
+          "include": ["@codler/react-native-keyboard-aware-scroll-view"]
+        }
+      }
     },
-    "plugins": [
-      "expo-document-picker"
-    ],
+    "plugins": ["expo-document-picker"],
     "extra": {
       "eas": {
         "projectId": "3a43be74-3f54-43e1-b771-54348fcaa110"
