--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
   },
   "dependencies": {
     "@codler/react-native-keyboard-aware-scroll-view": "^2.0.1",
+    "@expo/match-media": "^0.4.0",
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -69,6 +72,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.4",
     "react-native": "0.71.8",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -76,6 +80,7 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "0.18.10",
     "react-qr-code": "^2.0.8",
+    "react-responsive": "^9.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
