--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mobile",
   "version": "1.0.0",
+  "homepage": "http://tusharkhatiwada.github.io/bultra",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -16,7 +17,9 @@
     "expo-doctor": "node scripts/doctor.js",
     "g": "hygen generator",
     "eas:build-ios": "eas build --platform ios",
-    "eas:submit_latest": "eas submit -p ios --latest"
+    "eas:submit_latest": "eas submit -p ios --latest",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo export:web"
   },
   "jest": {
     "preset": "jest-expo",
@@ -99,6 +102,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-testing-library": "^5.6.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.1",
     "hygen": "^6.2.8",
     "jest": "^29.2.1",
